# smart-desktop-manager

./: .gitignore  LICENSE.txt  README.md  components.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
.github/workflows/: build.yml
docs/: CLEAN_VIEW.md  CONTENT_TYPE_VIEW.md  DELETE_QUEUE.md  DUPLICATION_VIEW.md  FILE_EXPLORER_VIEW.md  LOCAL_BUILD.md  MOVE_MANAGER_QUEUE.md  SETTINGS_DIALOGUE.md  SIDEBAR.md  Smart_Desktop_Manager_Requirements.md  WELCOMPAGE.MD  packaging.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: sdm-installer-aarch64-apple-darwin  sdm-installer-x86_64-apple-darwin
src-tauri/scripts/: Distribution.xml  conclusion.html  installer.nsh  license.html  preinstall  welcome.html
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: archive.rs  batch.rs  cleaner.rs  content_search.rs  copy.rs  dedupe.rs  dir.rs  engine.rs  mod.rs  move_op.rs  operation.rs  preview_op.rs  search.rs  settings.rs  setup.rs  shell.rs  thumbnails.rs  tree.rs  volumes.rs  watch.rs
src-tauri/src/utils/: file_types.rs  mod.rs  path_visibility.rs  text_like.rs
src/components/: ActivityBar.tsx  Breadcrumbs.tsx  CleanTab.tsx  ContentTypeTab.tsx  DeleteQueueModal.tsx  DuplicateTab.tsx  FavouritesManagerModal.tsx  FileContextMenu.tsx  FilePreviewContent.tsx  InspectorSidebar.tsx  ListTray.tsx  MoveQueueManagerModal.tsx  PreviewModal.tsx  SearchDialog.tsx  SearchMainView.tsx  SearchResultsPanel.tsx  SettingsDialog.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  ThemeApplier.tsx  WelcomePage.tsx
(+26 files in other folders)
