[package]
name = "smart-desktop-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "smart-desktop-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "smart-desktop-manager"
path = "src/main.rs"

[[bin]]
name = "sdm-installer"
path = "src/bin/installer.rs"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
notify = "8.0"
ignore = "0.4"
fs_extra = "1.3"
crossbeam = "0.8"
chrono = "0.4"
grep = "0.3"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
regex = "1.11"
memmap2 = "0.9"
lazy_static = "1.5"
sysinfo = "0.33"
image = "0.25.9"
base64 = "0.22.1"
mime_guess = "2.0.5"
sha2 = "0.10"
hex = "0.4"
percent-encoding = "2.3"

